Fix Horizontal Scrolling Transactions Table (#6542)

--- a/app/assets/stylesheets/components/_transactions.scss
+++ b/app/assets/stylesheets/components/_transactions.scss
@@ -61,6 +61,8 @@ html[data-dark='true'] {
 }
 
 .transaction__memo {
+  max-width: 400px;
+
   > div {
     display: flex;
     align-items: center;
